# crypto-trading-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BinanceDataProcessor.hpp  BinanceExchange.hpp  BinanceFastParser.hpp  BinancePipeline.hpp  CoinbaseDataProcessor.hpp  CoinbaseExchange.hpp  CoinbaseFastParser.hpp  CoinbasePipeline.hpp  EventBus.hpp  IExchange copy.hpp  IExchange.hpp  IStrategy.hpp  KrakenDataProcessor.hpp  KrakenExchange.hpp  KrakenFastParser.hpp  KrakenPipeline.hpp  Logger.hpp  binance_data_processor.hpp  binance_exchange.hpp  binance_pipeline.hpp  coinbase_data_processor.hpp  coinbase_exchange.hpp  coinbase_pipeline.hpp  http_request.hpp  iexchange.hpp  ipipeline.hpp  istrategy.hpp  kraken_data_processor.hpp  kraken_exchange.hpp  kraken_fast_parser.hpp  kraken_pipeline.hpp  line_sender.h  line_sender.hpp  logger.hpp  spsc_queue.hpp  types.hpp  utils.hpp
src/: BinanceDataProcessor.cpp  BinanceExchange copy.cpp  BinanceExchange.cpp  BinancePipeline.cpp  CoinbaseDataProcessor.cpp  CoinbaseExchange.cpp  CoinbasePipeline.cpp  KrakenDataProcessor.cpp  KrakenExchange.cpp  KrakenPipeline.cpp  binance_data_processor.cpp  binance_exchange.cpp  binance_pipeline.cpp  coinbase_data_processor.cpp  coinbase_exchange.cpp  coinbase_pipeline.cpp  kraken_data_processor.cpp  kraken_exchange.cpp  kraken_pipeline.cpp  main copy.cpp  main.cpp
src/strats/: ArbitrageStrat.hpp  pair_trading_strat.hpp  simple_cross_exchange_arb_strat.hpp
